--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -79,7 +79,7 @@
                         <div class="nav-inner">
                              <ul class="am-nav am-nav-pills am-nav-justify">
                                 <li><a href="/" id="home">首页</a></li>
-                                <li><a href="/certification">学历学位认证</a></li>
+                                <li><a href="/certification" id="certification">学历学位认证</a></li>
                                 <li>
                                     <a href="/abroadeducation" id="abroad_education" >名校直通</a>
                                 <!-- sub-menu start-->
@@ -93,9 +93,9 @@
                                 <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
                                 <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
                                 <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
-                                <li>
-                                    <a href="/loan" id="loan">创业贷款申请</a>
-                                </li>
+{#                                <li>#}
+{#                                    <a href="/loan" id="loan">创业贷款申请</a>#}
+{#                                </li>#}
                                 <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
                                 <li><a href="/studytour" id="studytour">游学之旅</a></li>
                                 <li>
