--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin-top: 3em;">
+            <div class="row" style="margin-top: 5em;">
                 <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>我们的客户有话说</h4>
                 </div>
@@ -82,9 +82,9 @@
                             <img src="/static/images/person_1.jpg" alt="user">
                         </figure>
                         <blockquote>
-                            <p>“任达华，出来！”</p>
+                            <p>“去年报考哈佛，SAT都奇迹般过了，面试却惨遭阻杀。后来在美国朋友推荐下，抱着死马当活马医的心态找到了恒心，没想到让我费劲心思的事情在这里竟然如此简单。哈佛很美，我在这里等你。”</p>
                         </blockquote>
-                        <span>Steve Jobs, Apple Inc.</span>
+                        <span>--李同学</span>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -93,30 +93,26 @@
                             <img src="/static/images/person_2.jpg" alt="user">
                         </figure>
                         <blockquote>
-                            <p>“任达华，出来！”</p>
+                            <p>“很简单，碰到恒心之后，我的考试成绩没有再下过A。”</p>
                         </blockquote>
-                        <span>Steve Jobs, Apple Inc.</span>
+                        <span>--吴同学</span>
                     </div>
                 </div>
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
-                    <h4>留学云计算+大数据平台</h4>
-                </div>
-                <div class="text-center">
-                    <img src="/static/images/web/yjs.png">
-                </div>
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
+{#                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
+{#                    <h4>留学云计算+大数据平台</h4>#}
+{#                </div>#}
+{#                <div class="text-center">#}
+{#                    <img src="/static/images/web/yjs.png">#}
+{#                </div>#}
+                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 5em;">
                     <h4>招商与合作</h4>
+                    <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>
                 </div>
                 <div class="text-center">
                     <img src="/static/images/web/hz.png">
                 </div>
 
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
-                    <h4>联系我们</h4>
-                </div>
-                <div class="text-center">
-                    <img src="/static/images/web/hz.png">
-                </div>
+
             </div>
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
                 <h4>联系我们</h4>
