--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -40,31 +40,39 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h2>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。</h2>
+                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。</h5>
+                            <h5>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
                         </div>
+                        <br/>
                     </div>
 
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                        <span class="icon">
-                            <i class="icon-list"></i>
-                        </span>
-                        <div class="feature-copy">
-                            <h2>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h2>
-                        </div>
-                    </div>
+{#                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                        <span class="icon">#}
+{#                            <i class="icon-quill"></i>#}
+{#                        </span>#}
+{#                        <div class="feature-copy">#}
+{#                            <h5>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
             </div>
         </div>
         <div class="container">
         <div id="hxco-features-2" style="background: #fff" style="width:100%;">
             <div class="hxco-container1" style="width:100% !important;">
-                <div class="row feature-title text-center" id="wangke">
-                    <h3>什么情况会认证受阻？</h3>
+{#                <div class="row feature-title text-center" id="wangke">#}
+{#                    <h3>什么情况会认证受阻？</h3>#}
+{#                </div>#}
+                <div class="row">
+                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                        <h1>什么情况会认证受阻?</h1>
+                    </div>
+
                 </div>
-                <div class="row" style="margin-top: 2em;">
+                <div class="row" style="">
                     <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
@@ -128,39 +136,47 @@
         </div>
         <div class="container" style="margin-top:3em;">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
-                    <h4>Why Us ?</h4>
+{#                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">#}
+{#                    <h4>Why Us ?</h4>#}
+{#                    <h4>为什么选择我们?</h4>#}
+{#                </div>#}
+
+                <div class="row">
+                    <div class="col-md-12 text-center" id="highschool" style="margin-bottom: 3em;">
+                        <h1>为什么选择我们?</h1>
+                    </div>
+
                 </div>
 
                 <div class="col-md-6">
                     <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
     {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                     </div>
-                    <div>
-                        <div style="text-align:left;">
-                            <img src="/static/images/web/left-top.png">
-                        </div>
-                        <div class="education-text ">
-                            <p>为什么选择恒心？</p>
-                        </div>
-                        <div style="text-align:right">
-                            <img src="/static/images/web/right-down.png">
-                        </div>
-                    </div>
+{#                    <div>#}
+{#                        <div style="text-align:left;">#}
+{#                            <img src="/static/images/web/left-top.png">#}
+{#                        </div>#}
+{#                        <div class="education-text ">#}
+{#                            <p>为什么选择恒心？</p>#}
+{#                        </div>#}
+{#                        <div style="text-align:right">#}
+{#                            <img src="/static/images/web/right-down.png">#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>学历认证一手资源，最低的价格，最快的速度，最贴心的服务</h5>
+                            <h5>学历认证直接认证资源，没有中介收取介绍费用，最低的价格，最快的速度，最贴心的服务</h5>
                         </div>
                     </div>
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询认证进度</h5>
@@ -169,16 +185,16 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构不再接单的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
+                            <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构认证成功率下降的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
                         </div>
                     </div>
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>多手准备，提供配套应急方案，总能找到最合适你的解决办法</h5>
@@ -187,22 +203,28 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-list"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>如果认证结果失败，恒心保证退还所有缴纳费用</h5>
+                            <h5>如果认证结果失败，恒心保证退还所有认证费用</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container" style="margin-top: 3em;">
+        <div class="container" style="margin-top: 5em;">
+{#            <div class="row">#}
+{#                <div class="col-md-8 col-md-offset-2 text-center heading-section">#}
+{#                    <h4>申请学历学位认证所需材料</h4>#}
+{#                </div>#}
+{#            </div>#}
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section">
-                    <h4>申请学历学位认证所需材料</h4>
+                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                        <h1>申请学历学位认证所需材料</h1>
+                    </div>
+
                 </div>
-            </div>
             <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
@@ -253,11 +275,17 @@
         </div>
 
         <div class="container" style="margin-top: 3em;">
+{#            <div class="row">#}
+{#                <div class="col-md-8 col-md-offset-2 text-center heading-section">#}
+{#                    <h4>申请所需流程</h4>#}
+{#                </div>#}
+{#            </div>#}
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section">
-                    <h4>申请所需流程</h4>
+                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                        <h1>申请所需流程</h1>
+                    </div>
+
                 </div>
-            </div>
         </div>
     </div>
 {% endblock %}
