--- a/core/templates/web/education.html
+++ b/core/templates/web/education.html
@@ -21,7 +21,7 @@
 			<div class="col-md-6 agile-sub">
 				<h4>高中申请</h4>
 				<p>与其在国内高中变成装填机器，不如给孩子一片广阔天空找寻自我的价值。恒心海外优质高中直通项目，根据低龄留学生群体的实际需求，提供加拿大高中个性化申请服务。</p>
-				<a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>
+				<a class="btn btnprimary readmore" href="/highschool">查看更多<i class="icon-align-right"></i></a>
 			</div>
 			<div class="col-md-6 agile-img">
 				<img src="/static/images/web/g2.jpg" style="width: 100%" alt="image">
@@ -35,7 +35,7 @@
 			<div class="col-md-6 agile-sub">
 				<h4>本研直通</h4>
 				<p>如果你有颗名校深造的心，却没有进得去TOP100的成绩，恒心用秘而不宣的规则带你体验弯道超车的快感，无障碍就读国际一流大学。</p>
-				<a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>
+				<a class="btn btnprimary readmore" href="/mxztc">查看更多<i class="icon-align-right"></i></a>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -44,7 +44,7 @@
 			<div class="col-md-6 agile-sub">
 				<h4>快速本科</h4>
 				<p>如果你只是为了一个海归的殊荣，时刻感觉四年求学长征简直劳民伤财，恒心还有Plan B，超低门槛，超低学费的毕士达大学一年快速本科，带你脱离学海。</p>
-				<a class="btn btnprimary readmore" href="/">查看更多<i class="icon-align-right"></i></a>
+				<a class="btn btnprimary readmore" href="/ksbk">查看更多<i class="icon-align-right"></i></a>
 			</div>
 			<div class="col-md-6 agile-img">
 				<img src="/static/images/web/g2.jpg" style="width: 100%"  alt="image">
