--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -2,13 +2,14 @@
 
 {% block head %}
     <script type="text/javascript">
-    $(document).ready(function () {
-        $('#abroad_education').prop('class', 'actived');
-    });
+        $(document).ready(function () {
+            $('#abroad_education').prop('class', 'actived');
+        });
     </script>
 {% endblock %}
 
 {% block content %}
+
     <div class="course-header carousel-margin">
         <img  src="/static/images/web/courseheader.png">
     </div>
@@ -24,115 +25,115 @@
             <img src="/static/images/bsd.png">
         </div>
         <div class="row" style="margin-top:4em;">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="ourservice">
-                <h4>学校特色</h4>
-           </div>
+            <div class="col-md-8 col-md-offset-2 text-center animate-box fadeInUp animated" style="margin-bottom: 2em;">
+                <h1>学校特色</h1>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="feature-left">
+                <div class="feature-banner">
                     <span class="icon">
                         <i class="icon-checkmark"></i>
                     </span>
-                    <div class="feature-copy">
-                        <h3>学费低廉价格好，轻松入学没烦恼</h3>
+                    <div class="feature-banner-copy">
+                        <h4>学费低廉价格好，轻松入学没烦恼</h4>
                         <p>可负担的收费标准，让您在美国轻松完成学业</p>
                     </div>
                 </div>
-                <div class="feature-left">
+                <div class="feature-banner">
                     <span class="icon">
                         <i class="icon-checkmark"></i>
                     </span>
-                    <div class="feature-copy">
-                        <h3>体育保送，让您美国圆梦</h3>
+                    <div class="feature-banner-copy">
+                        <h4>体育保送，让您美国圆梦</h4>
                         <p>毕士达大学已加入美国基督教大学体育协会（NCCAA），可供男女足球，棒球，篮球等体育特长生保送大学</p>
                     </div>
                 </div>
-                <div class="feature-left">
+                <div class="feature-banner">
                     <span class="icon">
                         <i class="icon-checkmark"></i>
                     </span>
-                    <div class="feature-copy">
-                        <h3>安那罕市安全校区，学生安心家长放心</h3>
+                    <div class="feature-banner-copy">
+                        <h4>安那罕市安全校区，学生安心家长放心</h4>
                         <p>学校坐落于四季气候宜人的加州安那罕市（Anaheim）,周边环境安全。临近L.A国际机场，迪士尼乐园，环球影城等，交通便利。</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="feature-left">
+                <div class="feature-banner">
                     <span class="icon">
                         <i class="icon-checkmark"></i>
                     </span>
-                    <div class="feature-copy">
-                        <h3>跨越语言门坎，进入留学殿堂</h3>
+                    <div class="feature-banner-copy">
+                        <h4>跨越语言门坎，进入留学殿堂</h4>
                         <p>英文托福成绩未达标准的学生，可通过英文语言课程（ESL）有条件地入学</p>
                     </div>
                 </div>
-                <div class="feature-left">
+                <div class="feature-banner">
                     <span class="icon">
                         <i class="icon-checkmark"></i>
                     </span>
-                    <div class="feature-copy">
-                        <h3>随时Online，让学习无所不在</h3>
+                    <div class="feature-banner-copy">
+                        <h4>随时Online，让学习无所不在</h4>
                         <p>毕士达大学神学硕士班（M.div），有无论在世界何处皆可进行的在线课程</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated"  style="margin-top: 3em;">
-                <h4>快速本科办理流程</h4>
-            </div>
+        <div class="col-md-8 col-md-offset-2 text-center animate-box fadeInUp animated"  style="margin-top: 3em;margin-bottom: 2em;">
+            <h1>快速本科办理流程</h1>
+        </div>
 
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">01.</h4>
-                    <h2 class="numberh2">提交资料</h2>
-                </div>
+        <div class="row row-bottom-padded-lg">
+            <div class="col-md-3 col-push-1">
+                <div class="fh5co-icon"><i class="icon-browser"></i></div>
             </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-                    <h4 class="fh5co-number">02.</h4>
-                    <h2>可行性评估</h2>
-                </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
+            <div class="col-md-8 col-md-push-1">
+                <h4 class="fh5co-number">01.</h4>
+                <h2 class="numberh2">提交资料</h2>
             </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">03.</h4>
-                    <h2 class="numberh2">录取</h2>
-                </div>
+        </div>
+        <div class="row row-bottom-padded-lg">
+            <div class="col-xs-push-2 col-md-8">
+                <h4 class="fh5co-number">02.</h4>
+                <h2>可行性评估</h2>
             </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-                    <h4 class="fh5co-number">04.</h4>
-                    <h2>学分转换</h2>
-{#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
-{#                    <ul>#}
-{#                        <li>根据指定的申请方案，准备相应材料和文书</li>#}
-{#                        <li>必要时提供考试辅导和背景提升服务</li>#}
-{#                    </ul>#}
-                </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
+            <div class="col-md-3 col-md-push-1">
+                <div class="fh5co-icon"><i class="icon-mobile"></i></div>
             </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">05.</h4>
-                    <h2 class="numberh2">快速毕业</h2>
-                </div>
+        </div>
+        <div class="row row-bottom-padded-lg">
+            <div class="col-md-3 col-push-1">
+                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
             </div>
+            <div class="col-md-8 col-md-push-1">
+                <h4 class="fh5co-number">03.</h4>
+                <h2 class="numberh2">录取</h2>
+            </div>
+        </div>
+        <div class="row row-bottom-padded-lg">
+            <div class="col-xs-push-2 col-md-8">
+                <h4 class="fh5co-number">04.</h4>
+                <h2>学分转换</h2>
+                {#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
+                {#                    <ul>#}
+                {#                        <li>根据指定的申请方案，准备相应材料和文书</li>#}
+                {#                        <li>必要时提供考试辅导和背景提升服务</li>#}
+                {#                    </ul>#}
+            </div>
+            <div class="col-md-3 col-md-push-1">
+                <div class="fh5co-icon"><i class="icon-mobile"></i></div>
+            </div>
+        </div>
+        <div class="row row-bottom-padded-lg">
+            <div class="col-md-3 col-push-1">
+                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
+            </div>
+            <div class="col-md-8 col-md-push-1">
+                <h4 class="fh5co-number">05.</h4>
+                <h2 class="numberh2">快速毕业</h2>
+            </div>
+        </div>
 
     </div>
 {% endblock %}
