--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -5,9 +5,6 @@
     $(document).ready(function () {
         $('#abroad_education').prop('class', 'actived');
     });
-    $(document).ready(function () {
-            $('#home').prop('class', 'actived');
-        });
         /*var a,b,c;
         a=$("#dh").offset().top;//元素相对于窗口的距离
         b=$(window).scrollTop(); //监控窗口已滚动的距离;
@@ -88,14 +85,12 @@
             </div>
             <div class="col-md-8 col-md-offset-2 text-center" style="margin-top:-2em;">
                 <p>
-                    考哈佛还是进耶鲁不该只是别人家小孩烦恼的事，SAT和TOFEL也都不该是你成为别人家小孩的阻碍。
+                    如果你有颗名校深造的心，却没有进得去TOP100的成绩，恒心就来带你体验弯道超车的快感。
                 </p>
-                <p>
-                    恒心让你切身体会一次这甜蜜的纠结，圆你TOP100的名校梦。
-                </p>
+
             </div>
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="usa" style="margin-top: 4em;">
-                <h4>美国保进名校</h4>
+            <div class="col-md-8 col-md-offset-2 text-center" id="usa" style="margin-top: 4em;margin-bottom: 2em;">
+                <h1>美国保进名校</h1>
             </div>
             <div class="col-md-4 animate-box fadeInUp animated ">
                 <div class="hexoco-project-item">
@@ -179,8 +174,8 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="canada" style="margin-top: 4em;">
-                <h4>加拿大保进名校</h4>
+            <div class="col-md-8 col-md-offset-2 text-center" id="canada" style="margin-top: 4em;margin-bottom: 2em;">
+                <h1>加拿大保进名校</h1>
             </div>
             <div class="col-md-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
@@ -211,8 +206,8 @@
             </div>
 
             <div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center heading-section" id="material" style="margin-top:4em;">
-					<h4>申请学校所需材料</h4>
+				<div class="col-md-8 col-md-offset-2 text-center" id="material" style="margin-top:4em;margin-bottom: 2em">
+					<h1>申请学校所需材料</h1>
 				</div>
 			</div>
             <div class="row" style="">
@@ -240,8 +235,8 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" style="margin-top: 4em;" id="process">
-                <h4>保进办理流程</h4>
+            <div class="col-md-8 col-md-offset-2 text-center" style="margin-top: 4em;margin-bottom: 2em;" id="process">
+                <h1>保进办理流程</h1>
             </div>
             <div class="text-center" style="padding-bottom: 3em;margin-top:-2em;">
                 <img  src="/static/images/web/bjlc.png">
@@ -250,8 +245,8 @@
     </div>
     <div id="hxco-testimonial">
 		<div class="hxco-container">
-            <div class="row feature-title text-center" id="anli">
-                <h3>成功案例</h3>
+            <div class="row text-center" id="anli">
+                <h1>成功案例</h1>
             </div>
             <div class="rows">
 					<div id="owl-car" class="owl-carousel owl-carousel-fullwidth ">
